# semnav_migration

./: CMakeLists.txt
extras/object_pose_interface_msgs/: CMakeLists.txt  package.xml
extras/object_pose_interface_msgs/msg/: Classification.msg  KeypointDetections3D.msg
include/: polygeom_lib.h  reactive_planner_lib.h
install/: local_setup.sh  setup.sh
install/semnav/share/semnav/: package.bash  package.zsh
log/: latest_build
src/: fake_lidar_publisher.cpp  fake_odometry_publisher.cpp  human_following.cpp  human_following_fallen.cpp  human_following_signal.cpp  map_debug.cpp  navigation.cpp  navigation_humans.cpp  navigation_semantic.cpp
src/libraries/: reactive_planner_lib.cpp
